# deploy-homeassistant-apps

./: .envrc  .gitignore  .yamllint  README.md  ansible.cfg  pyproject.toml  renovate.json5  run-all-checks.sh
.github/: copilot-instructions.md
.github/workflows/: quality-check.yaml
ansible/inventory/prod/: hosts.yml
ansible/inventory/prod/group_vars/: all.yml
ansible/playbooks/: deploy.yml
ansible/roles/appdaemon/files/: appdaemon.yaml
ansible/roles/appdaemon/handlers/: main.yml
ansible/roles/appdaemon/tasks/: main.yml
ansible/roles/homeassistant/tasks/: main.yml
ansible/roles/pyscript/tasks/: main.yml
doc/: appdaemon-sunset.md
homeassistant-config/blueprints/automation/mpagel/: climate.control.yaml  light.multi.switch.mqtt.yaml  light.switch.mqtt.yaml  light.timer.yaml  power.observer.yaml
src/: appdaemon.yaml
src/apps/bindings/: radiator.py
src/apps/network/: unifi.py
src/apps/sensors/: info.py  watchdog.py
src/apps/util/: base.py
