[project]
name = "homeassistant-apps"
version = "0.1.0"
description = "Homeassistant applications and configurations"
dependencies = ["appdaemon-apps", "pyscript-apps"]

[dependency-groups]
dev = ["ruff>=0.9.1", "yamllint>=1.35.1", "ansible>=13.0.0", "pyrefly>=0.45.2"]

[tool.uv.sources]
"appdaemon-apps" = { workspace = true }
"pyscript-apps" = { workspace = true }

[tool.uv]
# this is no package but a loose collection of files processed by AD:
package = false

[tool.uv.workspace]
members = ["platforms/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "ERA",    # eradicate (commented out code)
    "G",      # flake8-logging-format
    "I",      # isort
    "ISC",    # flake8-implicit-string-concat
    "PL",     # Pylint
    "RET",    # flake8-return
    "RUF100", # unused noqa
    "SLF",    # flake8-self
]
ignore = [
    "ISC001",  # single line string concat  # disabled per hint from ruff reg. conflict with formatter
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison  # we do this if value is just used once
    "PLR1711", # useless return  # we return None explicitly
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"

[tool.pyrefly]
project-excludes = ["**/node_modules", "**/__pycache__"]
search-path = ["platforms/pyscript-apps/src/apps/modules"]
infer-with-first-use = false

[tool.coverage.run]
branch = true

data_file = "coverage.coverage"
source = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

# Regexes for lines to exclude from consideration
exclude_lines = [
    # have to re-enable the standard pragma:
    "pragma: no cover",

    # tests don't hit defensive assertion code:
    "raise NotImplementedError",

    # "..." null statement (as used in protocols) does not require coverage:
    "\\.\\.\\.",

    # non-runnable code isn't run during tests:
    "if 0:",
    "if __name__ == .__main__.:",
    "if .*TYPE_CHECKING:",

    # do not measure coverage in platform dependent switches:
    "sys.platform == '",
    "sys.platform in",
]
